--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
         "phpunit/phpunit": "9.5.*"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "phpunit --configuration phpunit.xml"
     }
 }
